--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "autoprefixer": "^10.2.4",
         "axios": "^0.21.1",
+        "browser-sync": "^2.26.14",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
